--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,109 @@
 * {
 	box-sizing: border-box;
 }
+html, body {
+    min-height: 100%;
+}
 body {
-	font-family: Arial, sans-serif;
-	margin: 0 auto;
+	font: 20/1.3 Arial, sans-serif;
 	background: #F1F1F1;
-	font-size: 0;
-	max-width: 1200px;
-	padding: 0 10%;
+	color: transparent;
+}
+.vk-container {
+	padding-top: 40px;
+	margin: 0 auto;
+}
+.vk-search {
+	max-width: 1024px;
+	margin: 0 auto;
+    position: relative;
+    line-height: 50px;
 }
 .vk-input {
-	background: #F1F1F1;
-	color: #C2C2C2;
-	font-weight: bold;
-	font-size: 50px;
-	display: inline-block;
-	margin: 0 auto;
+    background: transparent;
 	width: 100%;
-	border: none;
+	padding: 0 80px 0 10px;
+    font-weight: 700;
+    border: none;
+    color: #DDDDDD;
+    font: inherit;
+    margin: 0;
 }
-input::placeholder {
-	color: #C2C2C2;
+input[type="search"] {
+    box-sizing: border-box;
+}
+input {
+	line-height: normal;
 }
 .vk-button {
-	display: inline-block;
-	margin: 0 auto;
-	background: #F1F1F1;
-	border: none;
-	width: 30%;
+	position: absolute;
+    width: 80px;
+    height: 80px;
+    text-indent: 100px;
+    overflow: hidden;
+    right: 0;
+    top: 50%;
+    background: transparent url(../img/magnifier.svg) no-repeat center center;
+    background-size: 100%;
+    border: none;
+    transition: transform 0.3s;
+    cursor: pointer;
+    text-transform: none;
+    font: inherit;
 }
-aside {
-	display: inline-block;
-	vertical-align: middle;
-	width: 30%;
-	padding: 12px;
-	font-size: 0;
+.vk-search-image {
+	color: #333;
+    margin-top: 40px;
+    width: 100%;
+    padding: 0 10.5%;
+    font-size: 0;
 }
-.vk-people img {
+.vk-col {
+	font-size: 10px;
+    width: 30%;
+    padding: 0 0 5px;
+    display: inline-block;
+    vertical-align: top;
+}
+.vk-h2 {
+	font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: #c2c2c2;
+}
+.vk-list {
+	padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.vk-col:nth-child(2) {
+	margin: 0 5%;
+}
+.vk-face {
 	border-radius: 50%;
 }
-.vk-people a {
+.vk-list a {
 	color: #CCCCCC;
 	text-decoration: none;
+	padding: 1px;
+    display: inline-block;
+    margin: 3px 0;
+    cursor: pointer;
+    border-radius: 5px;
+    background: rgba(118,117,128,0.05);
+    overflow: hidden;
 }
-.vk-popular a {
-	color: #CCCCCC;
-	text-decoration: none;
-}
-.vk-recent a {
-	color: #CCCCCC;
-	text-decoration: none;
-}
-.vk-popular {
-
-}
-li {
-	display: block;
-	background: #EBEBED;
-	font-size: 12px;
-	color: #C2C2C2;
-	margin: 5px;
-	border-radius: 3%;
+.vk-list p {
+	vertical-align: middle;
+    font-size: 7px;
+    display: inline-block;
+    font-weight: 700;
+    margin: 0 0 0 0;
+    width: calc(100% - 70px);
+    color: inherit;
 }
 a:hover {
 	color: #F87E7E;
 	text-decoration: none;
-}
-.vk-people-list {
-	display: inline-block;
-	width: calc(100%-70px);
-	vertical-align: top;
-	margin: 4px;
-}
-.vk-popular-list {
-	display: inline-block;
-	width: calc(100%-70px);
-	vertical-align: middle;
-	margin: 4px 0;
-}
-.vk-recent-list {
-	display: inline-block;
-	width: calc(100%-70px);
-	vertical-align: middle;
-	margin: 4px 0;
 }
